# edit-python.pe

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/: main.py
src/edit_python_pe/: constants.py  main.py  strings.py  utils.py
tests/: test_member_app.py  test_utils.py
translations/es/LC_MESSAGES/: messages.mo
translations/fr/LC_MESSAGES/: messages.mo
translations/it/LC_MESSAGES/: messages.mo
translations/pt/LC_MESSAGES/: messages.mo
translations/qu/LC_MESSAGES/: messages.mo
