[project]
name = "edit-python-pe"
version = "0.1.1"
description = "Allows member and project profile editing onto python.pe git repository"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Jean-Pierre Chauvel", email = "jean.pierre.chauvel@autodesk.com" }
]
requires-python = ">=3.13"
module = "edit_python_pe"
dependencies = [
    "pygit2==1.17.0",
    "textual==3.1.0",
    "pygithub==2.6.1",
    "pyyaml>=6.0",
]

[project.scripts]
edit-python-pe = "edit_python_pe.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/edit_python_pe/__about__.py"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
]

[tool.black]
line-length = 79
