[project]
name = "edit-python-pe"
version = "0.2.1"
description = "Allows member and project profile editing onto python.pe git repository"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Jean-Pierre Chauvel", email = "jean.p.chauvel@gmail.com" }
]
requires-python = ">=3.13"
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Documentation :: Sphinx",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
module = "edit_python_pe"
dependencies = [
    "pygit2==1.17.0",
    "textual==3.1.0",
    "pygithub==2.6.1",
    "pyyaml==6.0.2",
    "platformdirs==4.3.7",
    "babel==2.17.0",
]

[project.urls]
Homepage = "http://github.com/pythonpe/edit-python.pe"
Documentation = "https://github.com/pythonpe/edit-python.pe/blob/main/README.md"
Repository = "http://github.com/pythonpe/edit-python.pe"
Issues = "https://github.com/pythonpe/edit-python.pe/issues"

[project.scripts]
edit-python-pe = "edit_python_pe.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/edit_python_pe/__about__.py"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "textual-dev==1.7.0",
]

[tool.black]
line-length = 79
