[project]
name = "edit-python-pe"
version = "0.2.6"
description = "Allows member and project profile editing onto python.pe git repository"
readme = "README.md"
authors = [
    { name = "Jean-Pierre Chauvel", email = "jean.p.chauvel@gmail.com" },
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Documentation :: Sphinx",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
module = "edit_python_pe"
dependencies = [
    "pygit2==1.18.2",
    "textual==6.1.0",
    "pygithub==2.8.1",
    "pyyaml==6.0.2",
    "platformdirs==4.4.0",
    "babel==2.17.0",
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "http://github.com/pythonpe/edit-python.pe"
Documentation = "https://github.com/pythonpe/edit-python.pe/blob/main/README.md"
Repository = "http://github.com/pythonpe/edit-python.pe"
Issues = "https://github.com/pythonpe/edit-python.pe/issues"

[project.scripts]
edit-python-pe = "edit_python_pe.main:main"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/edit_python_pe/__about__.py"

[tool.black]
line-length = 79

[dependency-groups]
dev = [
    "black>=25.1.0",
    "deep-translator>=1.11.4",
    "isort>=6.0.1",
    "polib>=1.2.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "textual-dev==1.7.0",
    "tomli-w>=1.2.0",
]
